# ask-paper-ai

./: .gitignore  .ignore  README.md  docker-compose.yml  start-infra-local.sh
app/: package.json
backend/: .gitignore  Dockerfile  Dockerfile.aws.lambda  aws-docker-compose.yml  cache.json  deploy.sh  docker-compose.yml  main.py  output.txt  paper.txt  pyproject.toml  requirements.txt  run_lambda.sh
backend/.aws/: credentials
backend/doc2json/grobid2json/: tei_to_json.py
backend/doc2json/grobid2json/grobid/: grobid_client.py
backend/infrastructure/: package.json  tsconfig.json
backend/infrastructure/src/: api-stack.ts  db-stack.ts  main-stack.ts  main.ts
backend/infrastructure/src/constructs/: dynamo-table.ts
backend/output/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
backend/scripts/: build.sh  mock_sandbox.sh  run_grobid.sh  run_lambda.sh  run_local.sh
backend/src/: api.py  aws.py  constants.py  db.py  discord_client.py  main.py  middleware.py  nlp.py  users.py
backend/src/database/: db.py  users.py
backend/src/doc2json/flask/: app.py
backend/src/doc2json/grobid2json/: tei_to_json.py
backend/src/doc2json/grobid2json/grobid/: grobid_client.py
backend/src/doc2json/utils/: file_util.py
backend/src/utils/: aws_client.py  constants.py  json_utils.py
backend/temp/: 1.tei.xml  10.tei.xml  2.tei.xml  3.tei.xml  4.tei.xml  5.tei.xml  6.tei.xml  7.tei.xml  8.tei.xml  9.tei.xml
chatgpt-api/: index.js  package.json
chatgpt-api-python/: .gitignore  cache.json  main.py  requirements.txt
frontend/: Dockerfile  (+7 more)
(+120 files in other folders)
