[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
openai = "^0.27.0"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
beautifulsoup4 = "4.7.1"
boto3 = "^1.9.147"
requests = "^2.21.0"
flask = "1.0.2"
lxml = "^4.9.2"
python-magic = "0.4.18"
latex2mathml = "2.16.2"
itsdangerous = "2.0.1"
python-multipart = "^0.0.6"
mangum = "^0.17.0"
botocore = "^1.29.84"
langchain = "^0.0.101"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
